replace 2.0 local references with 2.0 Beta NuGet

--- a/src/ViewportViewExtension/ViewportViewExtension/packages.config
+++ b/src/ViewportViewExtension/ViewportViewExtension/packages.config
@@ -5,6 +5,10 @@
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.Wpf" version="57.0.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net452" />
+  <package id="DynamoVisualProgramming.Core" version="2.0.0-beta3316" targetFramework="net452" />
+  <package id="DynamoVisualProgramming.DynamoServices" version="2.0.0-beta3316" targetFramework="net452" />
+  <package id="DynamoVisualProgramming.WpfUILibrary" version="2.0.0-beta3316" targetFramework="net452" />
+  <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.0.0-beta3316" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="NUnit" version="2.6.3" targetFramework="net452" />
   <package id="Prism" version="4.1.0.0" targetFramework="net452" />
