--- a/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
+++ b/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
@@ -52,37 +52,49 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CoreNodeModels, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\int\Debug\CoreNodeModels.dll</HintPath>
+    <Reference Include="CoreNodeModels, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.WpfUILibrary.2.0.0-beta3316\lib\net45\CoreNodeModels.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="CoreNodeModelsWpf, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\int\Debug\CoreNodeModelsWpf.dll</HintPath>
+    <Reference Include="CoreNodeModelsWpf, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.WpfUILibrary.2.0.0-beta3316\lib\net45\CoreNodeModelsWpf.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DynamoCore, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\DynamoCore.dll</HintPath>
+    <Reference Include="DSIronPython, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\DSIronPython.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DynamoCoreWpf, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\DynamoCoreWpf.dll</HintPath>
+    <Reference Include="DynamoApplications, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\DynamoApplications.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DynamoServices, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\DynamoServices.dll</HintPath>
+    <Reference Include="DynamoCore, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\DynamoCore.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DynamoShapeManager, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\DynamoShapeManager.dll</HintPath>
+    <Reference Include="DynamoCoreWpf, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.WpfUILibrary.2.0.0-beta3316\lib\net45\DynamoCoreWpf.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DynamoUnits, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\DynamoUnits.dll</HintPath>
+    <Reference Include="DynamoInstallDetective, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\DynamoInstallDetective.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DynamoUtilities, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\DynamoUtilities.dll</HintPath>
+    <Reference Include="DynamoServices, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.DynamoServices.2.0.0-beta3316\lib\net45\DynamoServices.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DynamoShapeManager, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\DynamoShapeManager.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DynamoUnits, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.0.0-beta3316\lib\net45\DynamoUnits.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DynamoUtilities, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\DynamoUtilities.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
@@ -110,12 +122,13 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="ProtoCore, Version=1.3.0.961, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\ProtoCore.dll</HintPath>
+    <Reference Include="ProtoCore, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\ProtoCore.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="ProtoGeometry">
-      <HintPath>..\..\..\..\Dynamo_alfarok\bin\AnyCPU\Debug\ProtoGeometry.dll</HintPath>
+    <Reference Include="ProtoGeometry, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.0.0-beta3316\lib\net45\ProtoGeometry.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -132,6 +145,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="VMDataBridge, Version=2.0.0.3316, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Core.2.0.0-beta3316\lib\net45\VMDataBridge.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
