--- a/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
+++ b/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
@@ -169,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="DynamoPackage\Viewport\pkg.json" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -192,7 +193,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ViewportBuild\ViewportResources\" />
+    <Folder Include="DynamoPackage\Viewport\bin\" />
+    <Folder Include="DynamoPackage\Viewport\dyf\" />
+    <Folder Include="DynamoPackage\Viewport\extra\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\cef.redist.x64.3.2987.1601\build\cef.redist.x64.targets" Condition="Exists('..\packages\cef.redist.x64.3.2987.1601\build\cef.redist.x64.targets')" />
@@ -211,9 +214,11 @@
   <Import Project="..\packages\CefSharp.Common.57.0.0\build\CefSharp.Common.targets" Condition="Exists('..\packages\CefSharp.Common.57.0.0\build\CefSharp.Common.targets')" />
   <Import Project="..\packages\CefSharp.Wpf.57.0.0\build\CefSharp.Wpf.targets" Condition="Exists('..\packages\CefSharp.Wpf.57.0.0\build\CefSharp.Wpf.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)Resources" "$(ProjectDir)ViewportBuild\ViewportResources" /Y /E
-xcopy "$(ProjectDir)bin\x64\Debug\ViewportViewExtension.dll" "$(ProjectDir)ViewportBuild" /Y
-xcopy "$(ProjectDir)Viewport_ViewExtensionDefinition.xml" "$(ProjectDir)ViewportBuild" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(ProjectDir)Resources" "$(ProjectDir)DynamoPackage\Viewport\extra" /Y /E
+xcopy "$(ProjectDir)bin\x64\Debug\ViewportViewExtension.dll" "$(ProjectDir)DynamoPackage\Viewport\bin" /Y
+xcopy "$(ProjectDir)Viewport_ViewExtensionDefinition.xml" "$(ProjectDir)DynamoPackage\Viewport\extra" /Y
+xcopy "$(ProjectDir)DynamoPackage" "$(AppData)\Dynamo\Dynamo Core\2.0\packages" /Y /E
+xcopy "$(ProjectDir)DynamoPackage" "$(AppData)\Dynamo\Dynamo Revit\2.0\packages" /Y /E</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
