enable fallback canvas renderer

--- a/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
+++ b/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
@@ -177,6 +177,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\assests\js\OrbitControls.js" />
     <EmbeddedResource Include="Resources\assests\js\three.min.js" />
+    <EmbeddedResource Include="Resources\assests\js\CanvasRenderer.js" />
+    <EmbeddedResource Include="Resources\assests\js\Projector.js" />
     <Content Include="Resources\index.html" />
     <Content Include="Viewport_ViewExtensionDefinition.xml" />
   </ItemGroup>
@@ -217,7 +219,8 @@
     <PostBuildEvent>xcopy "$(ProjectDir)Resources" "$(ProjectDir)DynamoPackage\Viewport\extra" /Y /E
 xcopy "$(ProjectDir)bin\x64\Debug\ViewportViewExtension.dll" "$(ProjectDir)DynamoPackage\Viewport\bin" /Y
 xcopy "$(ProjectDir)Viewport_ViewExtensionDefinition.xml" "$(ProjectDir)DynamoPackage\Viewport\extra" /Y
-xcopy "$(ProjectDir)DynamoPackage" "$(AppData)\Dynamo\Dynamo Core\2.0\packages" /Y /E</PostBuildEvent>
+xcopy "$(ProjectDir)DynamoPackage" "$(AppData)\Dynamo\Dynamo Core\2.0\packages" /Y /E
+xcopy "$(ProjectDir)DynamoPackage" "$(AppData)\Dynamo\Dynamo Revit\2.0\packages" /Y /E</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
