--- a/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
+++ b/src/ViewportViewExtension/ViewportViewExtension/ViewportViewExtension.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.props" Condition="Exists('..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.props')" />
   <Import Project="..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.props" Condition="Exists('..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.props')" />
@@ -186,7 +186,10 @@
     <EmbeddedResource Include="Resources\assests\js\three.min.js" />
     <EmbeddedResource Include="Resources\assests\js\CanvasRenderer.js" />
     <EmbeddedResource Include="Resources\assests\js\Projector.js" />
+    <EmbeddedResource Include="Resources\assests\js\dat.gui.js" />
+    <EmbeddedResource Include="Resources\assests\js\viewer.js" />
     <Content Include="Resources\index.html" />
+    <EmbeddedResource Include="Resources\styles.css" />
     <Content Include="Viewport_ViewExtensionDefinition.xml" />
   </ItemGroup>
   <ItemGroup>
